# send

./: .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE-GPLv2  LICENSE-MIT  README.md  docker-compose.yaml  justfile  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: actionlint.yaml  build.yaml  ci.yaml  toml.yaml
.sqlx/: query-3938ee95df67fd899282e43e075b93c47daeeb3b0d66028900dc02770e764f6d.json  query-6e1da19b8c48a34acca6c30a191882a08708355aeae05ce63426fb4ff3c7085c.json  query-6f2686d42059f3bc0f2f29e8b015b514f121521ee42757274e544b8342659554.json  query-8aa358c992cc882088ce94efea209f1a3bcf902ad4c7c549f7b1f488c3374443.json  query-8f7d8b37ae64b8bc226b62cb3c9315724c7a42802fed6477b5276d1386916fc9.json  query-a93c021e49be8b0dd8fd2f9b698b87dc9001b176b399d1931572ca356fe1401f.json  query-be76bea4d8e77d7bd29e4b90da7c4182ae60d8861da41bb3b4b06ca94fc95772.json  query-c26a4d8e0ba35a71505ad6db3c73ef6cd8634da5e03c9d939a09a69cabfcdc3d.json  query-de582227b4de5bbdb4761132cca8ca5f46203998bb24e9b4c7f1cfee70ba400b.json  query-ff2f7d7a3fe03570c04421588beec8a007b1a7d1dee27211575fe83d61c66e74.json
crates/database/: Cargo.toml  README.md  build.rs
crates/database/migrations/: 20240907024432_initialize.sql
crates/database/src/: error.rs  lib.rs  migrate.rs  upload.rs
crates/human-friendly-ids/: Cargo.toml
crates/human-friendly-ids/src/: alphabet.rs  distribution.rs  error.rs  id.rs  lib.rs
crates/server/: Cargo.toml  README.md  build.rs
crates/server/src/: auth.rs  build_info.rs  config.rs  error.rs  main.rs  template.rs  tracing_config.rs  unique_ids.rs  uploads.rs
crates/server/src/extractors/: mod.rs  upload_fields.rs
crates/server/src/snapshots/: server__error__tests__BadRequest_body.snap  server__error__tests__FileTooBig_body.snap  server__error__tests__FileTooBig_response.snap  server__error__tests__FileTooBig_status_code.snap  server__error__tests__Internal_body.snap  server__error__tests__InvalidExpiry_body.snap  server__error__tests__InvalidFileName_body.snap  server__error__tests__NotFound_body.snap  server__error__tests__NotFound_response.snap  server__error__tests__NotFound_status_code.snap  server__error__tests__ParseError_body.snap  server__error__tests__ParseError_response.snap  server__error__tests__ParseError_status_code.snap  server__error__tests__SqlxError_status_code.snap  server__error__tests__TokioIoError_response.snap  server__error__tests__Unauthorized_body.snap  server__error__tests__Unauthorized_response.snap  server__error__tests__Unauthorized_status_code.snap  server__template__tests__render_download_page.snap
crates/server/static/: 404.html  site.webmanifest  styles.css
crates/server/templates/: download.hbs
crates/server/tests/: regression_tests.rs
crates/server/tests/snapshots/: regression_tests__cdn.jsdelivr.net-github.svg.snap  regression_tests__cdn.jsdelivr.net-linkedin.svg.snap  regression_tests__downloading_expired_file-2.snap  regression_tests__downloading_expired_file.snap  regression_tests__downloading_multiple_times-10.snap  regression_tests__downloading_multiple_times-5.snap  regression_tests__downloading_non_existant_file.snap  regression_tests__downloading_non_existent_file.snap  regression_tests__happy_path.snap  regression_tests__setting_expiry_too_high_fails.snap  regression_tests__successful_download_and_upload-2.snap  regression_tests__successful_download_and_upload-3.snap  regression_tests__successful_download_and_upload-4.snap  regression_tests__that_large_files_get_rejected.snap  regression_tests__that_many_files_cannot_exceed_max_size.snap  regression_tests__that_missing_auth_fails.snap  regression_tests__that_nonces_expire.snap  regression_tests__that_ratelimiting_works.snap  regression_tests__uploading_file_with_zero_bytes_len.snap  regression_tests__uploading_multiple_times.snap
scripts/: upload.sh
scripts/completions/: _send  send-completion.bash  send.fish
