[package]
name = "database"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls-ring", "sqlite", "macros", "chrono", "migrate", "uuid"] }
bon = { workspace = true, features = ["experimental-getter"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test = "0.4.4"

[lints]
workspace = true
