[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
description = "A server to handle secure transmission of files over the web."
license = "MIT or GPLv2"
repository = "https://github.com/josiahbull/send"

[dependencies]
database.workspace = true

# TODO: sort dependencies
# TODO: prune dependencies

axum = { workspace = true, features = ["json", "multipart", "macros"] }
chrono = { workspace = true, features = ["serde"] }

reqwest = { workspace = true, features = [
    "charset",
    "http2",
    "json",
    "rustls-tls",
] }

sqlx = { workspace = true, features = [
    "sqlite",
    "uuid",
    "chrono",
    "runtime-tokio",
] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "time",
    "serde",
    "json",
] }
uuid = { workspace = true, features = ["v4", "serde"] }
url = { version = "2.5.4", features = ["serde"] }

# For Validation.
base64 = { workspace = true }
rand = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header", "typed-routing"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-util = { workspace = true }
ssh-key = { workspace = true, features = ["crypto"] }
anyhow = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
handlebars = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true, features = [
    "compression-br",
    "compression-gzip",
    "trace",
] }
humantime = { workspace = true }
humansize = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = [
    "serialize",
    "reqwest-client",
] }
opentelemetry_sdk = { workspace = true, features = [
    "trace",
    "opentelemetry-http",
    "rt-tokio",
] }
tracing-opentelemetry = { workspace = true, features = ["async-trait"] }
reqwest-middleware = { workspace = true, features = ["json"] }
axum-tracing-opentelemetry = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = { workspace = true, features = [
    "tracing_level_info",
] }
opentelemetry-http = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
console-subscriber = { workspace = true }
tower-otel-http-metrics = { workspace = true, features = ["axum"] }
itertools = "0.14.0"

[dev-dependencies]
insta = { version = "1.41.1" }
tracing-test = "0.2.5"
httpmock = "0.7.0"
mutants = "0.0.3"

[lints]
workspace = true
