[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
description = "A server to handle secure transmission of files over the web."
license = "MIT or GPLv2"
repository = "https://github.com/josiahbull/send"

[dependencies]
database.workspace = true
human-friendly-ids = { workspace = true, features = ["serde"] }

# TODO: sort dependencies
# TODO: prune dependencies

axum = { workspace = true, features = ["json", "multipart", "macros", "http2"] }
chrono = { workspace = true, features = ["serde"] }

reqwest = { workspace = true, features = [
    "charset",
    "http2",
    "json",
    "rustls-tls",

    # XXX: Only needed for testing!
    "multipart",
    "stream"
] }

sqlx = { workspace = true, features = [
    "sqlite",
    "uuid",
    "chrono",
    "runtime-tokio",
] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "time",
    "serde",
    "json",
] }
uuid = { workspace = true, features = ["v4", "serde"] }
url = { workspace = true, features = ["serde"] }

# For Validation.
base64 = { workspace = true }
rand = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header", "typed-routing"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-util = { workspace = true }
ssh-key = { workspace = true, features = ["crypto"] }
futures = { workspace = true }
async-stream = { workspace = true }
handlebars = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true, features = [
    "compression-br",
    "compression-gzip",
    "trace",
] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = [
    "serialize",
    "reqwest-client",
    "grpc-tonic"
] }
opentelemetry_sdk = { workspace = true, features = [
    "trace",
    "rt-tokio",
] }
tracing-opentelemetry = { workspace = true, features = ["async-trait"] }
reqwest-middleware = { workspace = true, features = ["json"] }
axum-tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
tower-otel-http-metrics = { workspace = true, features = ["axum"] }
bon = { workspace = true }
reqwest-tracing = { workspace = true, features = ["opentelemetry_0_27"] }
tower_governor = { workspace = true, features = ["tracing"] }


[dev-dependencies]
insta = { workspace = true }
tracing-test = { workspace = true }
httpmock = { workspace = true }
mutants = { workspace = true }
indexmap = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
regex = { workspace = true }
libc = { workspace = true }
rstest = { workspace = true }
itertools = { workspace = true }

[build-dependencies]
vergen = { workspace = true, features = ["build", "cargo", "rustc", "si"] }
vergen-gitcl = { workspace = true }

[lints]
workspace = true
